--- a/app/globals.css
+++ b/app/globals.css
@@ -77,7 +77,7 @@
 
 
 
-.ql-snow .ql-picker.ql-size .ql-picker-item[data-value="14px"]::before {
+/* .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="14px"]::before {
   content: 'Normal';
   font-size: 14px !important;
 }
@@ -96,25 +96,20 @@
 .ql-toolbar .ql-stroke {
   fill: none;
   stroke-width: 1px !important;
-  /* Increase size */
 }
 
 .ql-toolbar .ql-fill {
   stroke: none;
-  
-  /* Increase size */
-}
+  }
 
 .ql-toolbar .ql-picker {
 
-  /* Increase size */
-  
-}
+} */
 textarea:focus, input:focus{
     outline: none !important;
 }
 
-.ql-toolbar button svg {
+/* .ql-toolbar button svg {
   
   height: 160% !important;
 }
@@ -125,7 +120,7 @@ textarea:focus, input:focus{
 .ql-toolbar .ql-formats {
   display: flex !important;
   vertical-align: middle;
-}
+} */
 
 ::-webkit-scrollbar {
   width: 12px; /* Set the width of the scrollbar */
